Requires:
~~~~~~~~~
-
New features:
~~~~~~~~~~~~~
- new CPSDocumentLanguageSelectWidget, require CPSCore > 3.18
- Possible to resize image within a Photo widget, and not anymore
  within an Image widget
- Add an HTML id on each widget: group_id
- Add 'depends on' attributes for javascript display toggle
- Malagasy language
Bug fixes:
~~~~~~~~~~
- Date widget use nn/nn/nnnn instead of n/n/n for rendering
- The Internal Links widget does not perform a permission check
  before displaying links.
- Corrected the <head>...</head> declarations in main_template_popup.pt
New internal features:
~~~~~~~~~~~~~~~~~~~~~~
- Malagasy javascript camendar (to translate)